<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/magnify"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_bookmarks"
        android:icon="@drawable/star_outline"
        android:title="@string/title_bookmarks" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/title_history" />

</menu>
