<resources>
    <string name="app_name">AviaTickets</string>
    <string name="textFlightTo">Куда:</string>
    <string name="textFlightFrom">Откуда:</string>
    <string name="buttonTrips">Поиск билетов</string>
    <string name="title_activity_full_trip">FullTripActivity</string>
    <string name="title_search">Поиск</string>
    <string name="title_history">История</string>
    <string name="title_bookmarks">Закладки</string>
    <string name="hintCityFrom">Откуда</string>
    <string name="hintCityTo">Куда</string>
    <string name="hintRouteType">Тип перелета</string>
    <string name="hintCabinClass">Класс обслуживания</string>
    <string name="hintAdultsCount">Количество взрослых</string>
    <string name="hintChildrenCount">Количество детей</string>
    <string name="hintInfantsCount">Количество младенцев</string>
    <string name="hintTransfer">С пересадками</string>
    <string name="hintDateFrom">Дата вылета</string>
    <string name="hintDateTo">Дата возращения</string>
    <string name="buttonPickDateFrom">Выбрать дату вылета</string>
    <string name="buttonPickDateTo">Выбрать дату возвращения</string>
    <string name="spinnerFlightTypeOneway">В одну сторону</string>
    <string name="spinnerFlightTypeRound">Туда-обратно</string>
    <string name="spinnerCabinClassEconomy">Эконом</string>
    <string name="spinnerCabinClassBusiness">Бизнес класс</string>
    <string name="progressDialogTripActivity">Подождите, операция выполняется…</string>
    <string name="hasTransfers">Есть пересадки</string>
    <string name="noTransfers">Без пересадок</string>
    <string name="durationComment">Время в пути</string>
    <string name="priceLinks">Цены</string>
    <string name="buttonPrice">Купить</string>
    <string name="errorOneAdultRequired">Необходим как минимум один взрослый пассажир</string>
    <string name="errorOneTooManyPassengers">Число пассажиров не должно превышать 8</string>
    <string name="errorInfantsMoreThanAdults">Младенцев не должно быть больше, чем взрослых</string>
    <string name="errorDateOutbound">Выберите дату отправления\n(ДД/ММ/ГГГГ)</string>
    <string name="errorDateInbound">Выберите дату возвращения\n(ДД/ММ/ГГГГ)</string>
    <string name="errorDateOutboundAfterDateIbound">Дата возвращения должна быть после даты отправления</string>
    <string name="errorDateInPast">Выберите дату не раньше сегодняшней</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="ticketsError">Билеты не найдены</string>
    <string name="cityError">Город не найден</string>
    <string name="responseError">Нет ответа</string>
    <string name="errorTicketsNotFound">Ни одного билета не найдено. \nПопробуйте ввести другие параметры поиска.</string>
    <string name="spinnerSortFiltersMinPrice">По цене</string>
    <string name="spinnerSortFiltersMaxPrice">По цене</string>
    <string name="spinnerSortFiltersMinTime">По времени</string>
    <string name="spinnerSortFiltersMaxTime">По времени</string>
    <string name="spinnerSortFiltersMinTransfers">По количеству пересадок</string>
    <string name="spinnerSortFiltersMaxTransfers">По количеству пересадок</string>
    <string name="hintSortFilters">Фильтры сортировки</string>
    <string name="searchHistorySettings">Сохранять историю поиска</string>
    <string name="hintDateFormat">ДД/ММ/ГГГГ</string>
    <string name="noSearchHistory">Тут пусто.\n¯\\_(ツ)_/¯</string>
    <string name="noBookmarks">Тут пусто.\n¯\\_(ツ)_/¯</string>
    <string name="fromPrice">от</string>
    <string name="moneySymbol">₽</string>
    <string name="AdultCountFill">1</string>
    <string name="ChildrenCountFill">0</string>
    <string name="loadingSearchHistoryText">Идет поиск истории…</string>
    <string name="update">Обновить</string>
    <string name="loadingBookmarksText">Идет поиск закладок…</string>
    <string name="loginText">Войдите с помощью Google Account, чтобы иметь больше возможностей.</string>
    <string name="cancel"><u>Отмена</u></string>
    <string name="signInActivityTitle">Вход в Google Account</string>
    <string name="signIn">Войти</string>
    <string name="failedToSignIn">Не удалось войти</string>
    <string name="notSignedIn">Войдите в аккаунт</string>
    <string name="goToSignIn"><u>Перейти ко входу</u></string>
    <string name="loginTextSearchHistory">Чтобы просматривать сохраненную историю войдите с помощью Google Account</string>
    <string name="loginTextBookmarks">Чтобы иметь возможность добавлять закладки войдите с помощью Google Account</string>
    <string name="signInSettings">Войти в Google Account</string>
    <string name="signOutSettings">Выйти из Google Account</string>
    <string name="successfullySignedOut">Вы вышли из аккаунта</string>
    <string name="errorEmptyOrigin">Введите город отправления</string>
    <string name="errorEmptyDestination">Введите город назначения</string>
</resources>
